--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,8 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    //buildToolsVersion "30.0.3"
+    namespace "ir.sajjadyosefi.android.tsr"
 
     lintOptions {
         checkReleaseBuilds false
@@ -14,7 +15,7 @@ android {
     defaultConfig {
         applicationId "ir.sajjadyosefi.android.tsr"
         minSdkVersion 30
-        targetSdkVersion 30
+        targetSdkVersion 34
         versionCode 2
         versionName "1.3"   //12-06-2023
 
@@ -27,12 +28,13 @@ android {
             keyAlias "keySajjad"
             keyPassword 'Yosefi$24s;dgoj'
         }
+     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.TubelessSajjadSigning
+            //signingConfig signingConfigs.TubelessSajjadSigning
         }
     }
     compileOptions {
@@ -58,5 +60,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     //implementation "androidx.annotation:annotation-experimental:1.2.0"
-}
 }
