--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Mon Nov 15 21:26:01 PST 2021
+#Mon Jan 13 14:16:03 GMT+03:30 2025
 distributionBase=GRADLE_USER_HOME
-#distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
-#distributionUrl=https://services.gradle.org/distributions/gradle-6.9-all.zip
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-all.zip
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
+#distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
+distributionUrl=file:/D:/Program_Files_Customized/android/Gradle/gradle-8.9-all.zip
+
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
