--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.TubelessSajjadSigning
+            signingConfig signingConfigs.TubelessSajjadSigning
         }
     }
     compileOptions {
